# e1000-emu

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  meson.build  shell.nix
src/: descriptors.rs  e1000.rs  eeprom.rs  ffi.rs  lib.rs  main.rs  net.rs  phy.rs  registers.rs  util.rs
src/e1000/: descriptors.rs  eeprom.rs  interrupts.rs  phy.rs  receive.rs  registers.rs  transmit.rs
