[package]
name = "nic-emu"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "nic-emu"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["pretty_env_logger", "tun-tap", "polling", "libvfio-user"]

[dependencies]
# Lib dependencies:
anyhow = "1.0.75"
packed_struct = "0.10.1"
internet-checksum = "0.2.1"
log = "0.4.20"

# Bin dependencies:
# all marked as optional to allow for lib compilation without bin dependencies
pretty_env_logger = { version = "0.5.0", optional = true }
tun-tap = { version = "0.1.4", default-features = false, features = ["libc"], optional = true } # Exclude default tokio feature
polling = { version = "3.0.0", optional = true }

[dependencies.libvfio-user]
features = ["patch-dma-limit"]
optional = true

# Pick one:
# Latest git version of libvfio-user-rs
git = "https://github.com/vmuxIO/libvfio-user-rs.git"
rev = "667916a90288883af6fb782d1a74ed0590b7c58f"

# Local development version, with libvfio-user-rs being in the same parent directory
#path = "../libvfio-user-rs/libvfio-user"
