[package]
name = "nic-emu"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "nic-emu-cli"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["tun-tap", "polling", "clap", "macaddr", "ipnet", "libvfio-user"]
generate-bindings = ["cbindgen"]

[dependencies]
# Lib dependencies:
anyhow = "1.0.75"
packed_struct = "0.10.1"
internet-checksum = "0.2.1"
log = "0.4.20"
pretty_env_logger = "0.5.0" # Included in library too for setting up logs via FFI interface

# Bin dependencies:
# all marked as optional to allow for lib compilation without bin dependencies
tun-tap = { version = "0.1.4", default-features = false, features = ["libc"], optional = true } # Exclude default tokio feature
polling = { version = "3.0.0", optional = true }
# Keep clap at 4.2.1 for now to ensure compatability with rustc 1.69, latest rustc in the stable NixOS channel
clap = { version = "=4.2.1", optional = true, features = ["derive"] }
macaddr = { version = "1.0.1", optional = true }
ipnet = { version = "2.8.0", optional = true }

[dependencies.libvfio-user]
features = ["patch-dma-limit"]
optional = true

# Pick one:
# Latest git version of libvfio-user-rs
git = "https://github.com/vmuxIO/libvfio-user-rs.git"
rev = "667916a90288883af6fb782d1a74ed0590b7c58f"

# Local development version, with libvfio-user-rs being in the same parent directory
#path = "../libvfio-user-rs/libvfio-user"

[build-dependencies]
cbindgen = { version = "0.25.0", optional = true }
